Bug 1764293 - Separate fuzzing values used for stream start/seek to better support muxed streams with mismatched start times as seen on Twitter/DokiDoki, etc. r=padenot

Differential Revision: https://phabricator.services.mozilla.com/D149586